app/globals.css
@import "tailwindcss";

@theme{
  --color-background: #000000;
  --color-highlight: #15D4B8;
  --color-highlight2: #5815D4;
  --color-secondary-text: #DEDEDE;
  --color-tertiary-text: #B8B6B6;
  --color-color1: #D41532;
  --color-color2: #91D415;
  --color-color3: #D41591;
  --color-color4: #D45815;
  --color-color5: #B715D4;
  --circle-seize: 80%;
  --blending: hard-light;
}

@layer base {
  body{
    @apply bg-black text-white;
  }
}

@layer components {

  html {
    scroll-behavior: smooth;
  }

  /*NAV STYLING*/
  .nav-wrapper {
    @apply fixed top-6 left-1/2 -translate-x-1/2 w-fit
    px-8 py-3 rounded-2xl
    backdrop-blur-md bg-white/5
    border border-white/10 shadow-lg;
  }

  /* Horizontal layout */
  .nav {
    @apply flex gap-10 items-center;
  }

  /* Link base style */
  .nav-link {
    @apply relative text-white/80 cursor-pointer
    text-sm tracking-wide transition duration-300 hover:text-white;
  }

  /* Underline animation */
  .nav-link::after {
    content: "";
    @apply absolute left-0 -bottom-1 h-0.5 w-0
    bg-highlight transition-all duration-300;
  }

  .nav-link:hover::after {
    @apply w-full;
  }

  .nav-link.active::after {
    @apply w-full;
  }

  .nav-link.active {
    @apply text-white;
  }

  .hero{
    @apply min-h-screen;
  }

  .gradient-bg{
    @apply min-h-screen overflow-hidden bg-linear-to-r from-highlight to-highlight2;
  }

  .about{
    @apply min-h-screen flex flex-col sm:flex-row justify-center sm:items-end gap-16 md:px-20;
  }

  .personal-info{
    @apply mb-75 max-w-4xl w-full py-6 px-6 rounded-2xl border border-white/10;
  }

  .personal-info-intro{
    @apply font-medium text-lg leading-relaxed;
  }

  .personal-info-text{
    @apply text-secondary-text;
  }

  .personal-info-text p{
    @apply mb-3 mt-3;
  }

  .education{
    @apply mb-75 max-w-2xl w-full px-8 py-6
    rounded-2xl border border-white/10 shadow-lg;
  }

  .details{
    @apply flex justify-between items-center w-full;
  }

  .education-title{
    @apply font-semibold text-xl;
  }

  .edu{
    @apply px-8 py-3;
  }

  .school{
    @apply font-semibold;
  }

  .description{
    @apply text-secondary-text whitespace-pre-line;
  }

  .time{
    @apply text-tertiary-text;
  }

  .page-container{
    @apply flex flex-col gap-24 px-6 md:px-17 py-10;
  }

  .experience{
    @apply flex flex-col gap-8;
  }

  .experience-title {
    @apply text-3xl font-semibold;
  }

  .card {
    @apply rounded-2xl border border-white/10 shadow-lg
    mt-6 px-8 py-6;
  }

  .card-title {
    @apply text-xl font-bold;
  }

  .location{
    @apply font-semibold;
  }

  .projects-title{
    @apply text-3xl font-semibold mb-6;
  }

  .projects-layout{
    @apply grid grid-cols-1 md:grid-cols-4 auto-rows-[200px] gap-4;
  }

  .project{
    @apply relative overflow-hidden rounded-2xl cursor-pointer;
  }

  .project-image{
    @apply w-full h-full object-cover transition duration-500;
  }

  .project:hover .project-image{
    @apply scale-110;
  }

  .project-overlay{
    @apply absolute inset-0 bg-black/70 text-white p-4
    flex flex-col justify-end opacity-0 transition duration-300;
  }

  .project:hover .project-overlay{
    @apply opacity-100;
  }

  .card-title{
    @apply text-lg font-bold;
  }

  .project-description{
    @apply line-clamp-3;
  }

  .project-0{
    @apply md:col-span-2 md:row-span-2;
  }

  .project-1 {
    @apply md:col-span-1 md:row-span-1;
  }

  .project-2 {
    @apply md:col-span-1 md:row-span-1;
  }

  .project-3 {
    @apply md:col-span-2 md:row-span-2;
  }

  .project-4 {
    @apply md:col-span-1 md:row-span-1;
  }

  .project-5 {
    @apply md:col-span-1 md:row-span-1;
  }

  .contact-title{
    @apply text-3xl font-semibold mb-6;
  }

  .contact-spiel{
    @apply text-tertiary-text;
  }

  .contact-link{
    @apply flex items-center gap-3 mt-3 text-secondary-text;
  }

  .contact-link a{
    @apply transition duration-200 hover:text-highlight;
  }

  .contact-icon{
    @apply w-5 h-5;
  }

  .project-page{
    @apply min-h-screen min-w-screen flex flex-col sm:flex-row items-center p-20 gap-20;
  }

  .deliverable{
    @apply flex flex-col gap-20 justify-center items-center w-3/4;
  }

  .projects-image{
    @apply h-4/5 w-auto hover:scale-110 transition-transform duration-300 ease-in-out rounded-md;
  }

  .projects-image:hover {
    @apply scale-110;
  }

  .projects-link{
    @apply flex flex-row justify-center gap-3;
  }

  .projects-description {
    @apply text-lg w-3/4 sm:w-1/4;
  }

  .projects-links a{
    @apply text-lg text-secondary-text hover:text-highlight transition duration-200;
  }
}

